# boardgame-rag-agent

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  document_processor.py  rag_agent.py  vector_store.py
src/tests/: test_rag_agent.py
tests/: test_api_client.py  test_rag_agent.py
